--- a/source/sass/catalog/card-item.scss
+++ b/source/sass/catalog/card-item.scss
@@ -5,12 +5,11 @@
 
   @media (min-width: $tablet-width) {
     width: 324px;
-    height: 511px;
     padding-bottom: 38px;
     padding-left: 39px;
     padding-right: 37px;
-    background: linear-gradient(to bottom, #ffffff 82px, #f2f2f2 0%);
-    margin-top: 60px;
+    background: linear-gradient(to bottom, #ffffff 63px, #f2f2f2 0%);
+    margin-bottom: 79px;
   }
 
   @media (min-width: $desktop-width) {
@@ -63,7 +62,7 @@
   color: #222222;
 
   @media (min-width: $tablet-width) {
-    margin-top: 28px;
+    margin-top: 30px;
     width: 156px;
     font-size: 20px;
     line-height: 24px;
@@ -80,9 +79,11 @@
   margin-left: -2px;
 
   @media (min-width: $tablet-width) {
-    width: 250px;
+    width: 254px;
     font-size: 16px;
+    line-height: 17px;
     border-collapse: collapse;
+    margin-left: 3px;
   }
 
   @media (min-width: $desktop-width) {
@@ -98,6 +99,16 @@
 .card-item__value {
   text-align: right;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 9px;
+  }
+}
+
+.card-item__row--middle .card-item__value {
+  @media (min-width: $tablet-width) {
+    padding-right: 4px;
+  }
 }
 
 .card-item__table td {
@@ -113,7 +124,7 @@
   font-size: 16px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 20px;
+    margin-top: 12px;
   }
 }
 
