--- a/source/sass/catalog/catalog.scss
+++ b/source/sass/catalog/catalog.scss
@@ -4,7 +4,7 @@
   padding-right: 20px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 67px;
+    padding-top: 50px;
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -27,6 +27,7 @@
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
+    margin-bottom: 100px;
   }
 }
 
