--- a/source/sass/catalog/extra-card-item.scss
+++ b/source/sass/catalog/extra-card-item.scss
@@ -1,5 +1,3 @@
-
-
 .extra-card-item {
   padding-bottom: 19px;
   border-bottom: 1px solid #e6e6e6;
@@ -13,7 +11,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 896px;
+    width: 893px;
     display: flex;
     justify-content: space-between;
     padding: 0;
@@ -68,7 +66,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 300px;
+    width: 308px;
   }
 }
 
@@ -78,7 +76,7 @@
 
   @media (min-width: $desktop-width) {
     width: 244px;
-    margin-top: 19px;
+    margin-top: 15px;
     margin-bottom: 15px;
   }
 }
@@ -89,11 +87,18 @@
   @media (min-width: $tablet-width) {
     width: 134px;
     text-align: right;
-
+  }
+  @media (min-width: $desktop-width) {
+  text-align: left;
   }
 }
 
 .extra-card-item__value {
   text-align: right;
   padding: 0;
+
+  @media (min-width: $desktop-width) {
+width: 34px;
+text-align: left;
+  }
 }
