--- a/source/sass/catalog/more-items.scss
+++ b/source/sass/catalog/more-items.scss
@@ -12,6 +12,8 @@
 
   @media (min-width: $desktop-width) {
     width: 245px;
+    margin-top: 70px;
+    height: 430px;
   }
 }
 
@@ -37,7 +39,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 13px;
+    margin-left: 17px;
   }
 }
 
@@ -57,6 +59,11 @@
     height: 60px;
     left: 36px;
     bottom: 93px;
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 36px;
+    bottom: 92px;
   }
 }
 
