--- a/source/sass/catalog/promotion.scss
+++ b/source/sass/catalog/promotion.scss
@@ -58,6 +58,11 @@
     width: 85px;
     height: 82px;
   }
+
+  @media (min-width: $desktop-width) {
+    top: 56px;
+    left: 81px;
+  }
 }
 
 .promotion__text {
@@ -78,7 +83,7 @@
 
   @media (min-width: $desktop-width) {
     margin: 0 auto;
-    margin-top: 105px;
+    margin-top: 100px;
     text-align: center;
   }
 }
