--- a/source/sass/header/main-navigation.scss
+++ b/source/sass/header/main-navigation.scss
@@ -1,5 +1,6 @@
 .main-navigation__list {
-  width: 320px;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -10,6 +11,8 @@
   @media (min-width: $tablet-width) {
     width: 440px;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     text-align: left;
     justify-content: space-between;
   }
