--- a/source/sass/form/comment-area.scss
+++ b/source/sass/form/comment-area.scss
@@ -87,7 +87,7 @@
   text-transform: uppercase;
   color: #444444;
   padding: 8px 0 0 15px;
-  margin: 0px 0 23px;
+  margin: 0 0 23px;
   border: 1px solid #e7e7e7;
   resize: none;
 
