--- a/source/sass/form/selection.scss
+++ b/source/sass/form/selection.scss
@@ -29,6 +29,7 @@
     font-size: 60px;
     margin-bottom: 54px;
   }
+
   @media (min-width: $desktop-width) {
     margin-bottom: 56px;
   }
@@ -93,7 +94,7 @@
 
 .selection__form-required {
   line-height: 16px;
-  margin: 20px -1px 33px 0px;
+  margin: 20px -1px 33px 0;
   color: #000000;
   text-align: center;
 
