Исправляет структуру SCSS файлов

--- a/source/sass/blocks/results-table.scss
+++ b/source/sass/blocks/results-table.scss
@@ -52,6 +52,7 @@
   color: #000000;
   margin-bottom: 4px;
   margin-top: 5px;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
