--- a/source/sass/blocks/optionally.scss
+++ b/source/sass/blocks/optionally.scss
@@ -85,18 +85,15 @@
 
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: 250px 250px;
-    gap: 19px 94px;
-    margin-left: 1px;
-    max-height: 125px;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 19px;
+    column-gap: 57px;
   }
 
   @media (min-width: $desktop-width) {
     display: grid;
-    grid-template-columns: 250px 250px 250px 250px;
-    gap: 75px;
-    min-height: 40px;
-    margin-left: 0;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 85px;
   }
 }
 
